# multilingual-tokenizer-benchmarking

./: .gitignore  CLAUDE.md  Makefile  README.md  REFERENCES.md  colab.py  colab_morphbpe_en_32k.py  download_and_prepare.py  download_data.py  evaluate_tokenizers.py  generate_tokenizers.py  pyproject.toml  train_llms.py  train_magnet.py
scripts/: install_superbpe.sh
src/prepare_data/: download_datasets.py  prepare_datasets.py
src/tools/: create_tokenizer.py  download_data.py  evaluate_tokenizer.py  superbpe_runner.py  train_llm.py  wandb_artifacts.py
src/utils/: evaluation_metrics.py  llm_training.py  magnet_model.py  magnet_training.py  morpheme_segmentation.py  tokenizer_algorithms.py
tests/: conftest.py  test_data_pipeline.py  test_evaluation_metrics.py  test_llm_training.py  test_magnet.py  test_superbpe.py  test_tokenizer_contract.py
tokens/: README.md
