[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multilingual-tokenizer-benchmarking"
version = "0.1.0"
description = "Benchmarking tokenizer algorithms (BPE, SuperBPE, WordPiece, Unigram, ByT5) across languages with different morphological typology."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Warren Woolf" }]
dependencies = [
    "tokenizers>=0.20",
    "transformers>=4.40",
    "datasets>=2.19",
    "sentencepiece>=0.2.0",
    "huggingface_hub>=0.23",
    "morfessor>=2.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
]
# Downstream LLM-perplexity evaluation (train_llms.py). Heavy dep, opt-in.
# Includes W&B for run logging; skip with --no-deps if you don't want it.
llm = [
    "torch>=2.1",
    "numpy>=1.24",
    "wandb>=0.16",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
